fix(authentication-service): undo change to client id and secret
GH-251
